# gitkebab

./: .gitignore  CMakeLists.txt  LICENSE  README.md
build-workspace/docker-images/android-ndk-build/: Dockerfile  README.md  build-docker-image.sh
build-workspace/patches/libgit2-1.4.2/: DEBUG-enable-libssh2-trace.diff  disable-gitentropy-ios.diff  fix-allow-injecting-libs-to-libgit2-tests-linking.diff  fix-android-avoid-getloadavg.diff  fix-macos-eintr-handling.diff  fix-std-c99.diff  fix-userauth-publikey-frommemory-detection.diff
build-workspace/patches/libssh2-1.10.0/: include-errno-on-ios.diff
build-workspace/patches/libssh2-1.9.0/: retry-on-eintr.diff
build-workspace/patches/openssl-1.1.1k/: pr-13694-android-ndk-22-build-fix.diff
build-workspace/scripts/cmocka-1.1.5/source/: check.sh  clone.sh  delete.sh
build-workspace/scripts/common/bash/: common.sh
build-workspace/scripts/gitkebab-0.8.0/source/: check.sh  clone.sh  delete.sh
build-workspace/scripts/gitkebab-head/source/: check.sh  clone.sh  delete.sh
build-workspace/scripts/libgit2-1.4.2/source/: check.sh  clone.sh  delete.sh
build-workspace/scripts/libiconv-1.16/source/: check.sh  clone.sh  delete.sh
build-workspace/scripts/libiconv-1.17/source/: check.sh  clone.sh  delete.sh
build-workspace/scripts/libssh2-1.10.0/source/: check.sh  clone.sh  delete.sh
build-workspace/scripts/openssl-1.1.1n/source/: check.sh  clone.sh  delete.sh
build-workspace/scripts/pcre-8.45/source/: check.sh  clone.sh  delete.sh
build-workspace/scripts/zlib-1.2.12/source/: check.sh  clone.sh  delete.sh
docs/: building.md  design.md
src/example/: CMakeLists.txt  example_sync.c  main.c
src/lib/: CMakeLists.txt  gitkebab.h  gk_commit.c  gk_commit.h  gk_conflicts.c  gk_conflicts.h  gk_credentials.c  gk_credentials.h  gk_execution_context.c  gk_execution_context.h  gk_filesystem.c  gk_filesystem.h  gk_index.c  gk_index.h  gk_init.c  gk_init.h  gk_keys.c  gk_keys.h  gk_lg2.c  gk_lg2_private.h  gk_log_components.c  gk_log_components.h  gk_logging.h  gk_merge.c  gk_merge.h  gk_remotes.c  gk_remotes.h  gk_repository.c  gk_repository.h  gk_results.c  gk_results.h  gk_session.c  gk_session.h  gk_session_progress.c  gk_session_progress.h  gk_status.c  gk_status.h  gk_sync.c  gk_sync.h  gk_types.h  (+4 more)
src/test/: CMakeLists.txt  general_tests.c  gk_test_env_utils.c  gk_test_env_utils.h  gk_test_filesystem_utils.c  gk_test_filesystem_utils.h  test_clone.c  test_commit.c  test_conflicts.c  test_create_local.c  test_execution_context.c  test_index.c  test_merge.c  test_no_init.c  test_remotes.c  test_session_progress.c  test_status.c  test_sync.c
src/test/fixtures/hooks/: pre-receive-fail-always
src/test/fixtures/simple-repo1-B_merge-conflicts.gitbak/: file1
src/test/fixtures/simple-repo1-B_merge-conflicts.gitbak/.gitbak/: FETCH_HEAD  MERGE_HEAD  MERGE_MSG  ORIG_HEAD  config  index
src/test/fixtures/simple-repo1-B_merge-conflicts.gitbak/.gitbak/logs/refs/heads/: main
src/test/fixtures/simple-repo1-B_merge-conflicts.gitbak/.gitbak/logs/refs/remotes/origin/: main
src/test/fixtures/simple-repo1-B_merge-conflicts.gitbak/.gitbak/objects/pack/: pack-233059be2c518da9bf511e1f211f0bb7fa3ca443.idx  pack-233059be2c518da9bf511e1f211f0bb7fa3ca443.pack
src/test/fixtures/simple-repo1-modifications/: file1-modified  file1-modified-incompatible  file3-mod-compatible-a  file3-mod-compatible-b  file3-mod-compatible-c  file3-mod-incompatible-a  file3-mod-incompatible-b  file4-mod-compatible-a  file4-mod-compatible-b  file4-mod-incompatible-a  file4-mod-incompatible-b  file5-mod-compatible-a  file5-mod-compatible-b
src/test/fixtures/simple-repo1.git/: config  packed-refs
src/test/fixtures/simple-repo1.git/objects/pack/: pack-214cc3096e85b77e70e4549d7979917764854cd0.idx  pack-214cc3096e85b77e70e4549d7979917764854cd0.pack
src/test/fixtures/simple-repo1.git/refs/heads/: main
src/test/fixtures/simple-repo1.gitbak/: .gitignore  file1  file2
src/test/fixtures/simple-repo1.gitbak/.gitbak/: FETCH_HEAD  config  index
src/test/fixtures/simple-repo1.gitbak/.gitbak/logs/refs/remotes/origin/: main
src/test/fixtures/simple-repo1.gitbak/.gitbak/refs/heads/: main
src/test/fixtures/simple-repo1.gitbak/folder1/: file3
